# docker_examples

./: .gitignore  README.md
flask_docker/: Dockerfile  app.py  setup.cfg  setup.py
flask_docker-compose/: Dockerfile  app.py  docker-compose.yml
flask_docker_logs/: Dockerfile  setup.cfg  setup.py
flask_multistage_docker-compose/: .coveragerc  Dockerfile  docker-compose.yml  flask_app.py  requirements.txt  test_app.py  test_requirements.txt
flask_multistage_docker-compose/example/: __init__.py
flask_multistage_docker-compose/t/: test_app.py
flask_multistage_docker-compose/templates/: server_info.html
flask_multistage_test/: .coveragerc  Dockerfile  docker-compose.yml  flask_app.py  setup.cfg
flask_multistage_test/example/: routes.py
multistage_from_external_image/: Dockerfile
multistage_from_image/: Dockerfile  binomial.cpp
simple_python_docker/: Dockerfile  Dockerfile.python_27  Dockerfile.ubuntu  hello_world.py
