[metadata]
name = flask_docker_logs
version = 0.0.1
author = Ayla Khan
author_email = ayla.khan@gmail.com

[options]
python_requires >= 3.6
install_requires =
    Flask==1.0.2
    Flask-WTF
    flask-mongoengine
    gunicorn==19.8.1
    Werkzeug
    mongoengine
    pymongo
    itsdangerous
    Jinja2
    WTForms

tests_require =
    pytest>=3.0.7
    pytest-html
    pytest-flask
    pytest-cov

include_package_data = True

packages = find:

[options.extras_require]
test =
    pytest-runner

[aliases]
test=pytest

[bdist_wheel]
universal = 0
